# fast-er

./: .readthedocs.yaml  LICENSE.txt  Probabilistic_Record_Linkage.ipynb  README.md  README.rst  comparison.py  linkage.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  publish-pip.yml  python-publish.yml
docs/: requirements.txt
docs/source/: architecture.rst  comparison.rst  conf.py  deduplication.rst  estimation.rst  evaluation.rst  index.rst  installation.rst  linkage.rst  modules.rst  requirements.rst  requirements.txt  usage.rst
example/: Example.ipynb  df_A_100000.Rdata  df_B_100000.Rdata
fast-er/: comparison.py  estimation.py  linkage.py
fast_er/: comparison.py  deduplication.py  estimation.py  linkage.py
faster/: __init__.py  comparison.py  deduplication.py  estimation.py  evaluation.py  linkage.py  search.py
