[build-system]
requires = ["setuptools", "wheel", "cupy-cuda12x", "numpy", "pandas", "scikit-learn", "tensorly"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-er"
version = "0.1.0"
description = "GPU-Accelerated Probabilistic Record Linkage in Python"
readme = "README.md"
requires-python = ">=3.7,<4"
authors = [
    {name = "Jacob Morrier", email = "jmorrier@caltech.edu"},
    {name = "Sulekha Kishore", email = "sulekha@caltech.edu"},
    {name = "R. Michael Alvarez", email = "rma@hss.caltech.edu"}
]
keywords = ["entity resolution", "GPU", "probabilistic record linkage", "record linkage"]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/jacobmorrier/fast-er"

[project.dependencies]
cupy-cuda12x = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
tensorly = "*"

[project.classifiers]
DevelopmentStatus = "Development Status :: 3 - Alpha"
AudienceDevelopers = "Intended Audience :: Developers"
AudienceScience = "Intended Audience :: Science/Research"
Topic = "Topic :: Scientific/Engineering"
License = "License :: OSI Approved :: MIT License"
ProgrammingLanguage = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]
Environment = "Environment :: GPU :: NVIDIA CUDA"
